--- a/resume.html
+++ b/resume.html
@@ -74,4 +74,32 @@
         </footer>
     </div>
 </body>
+            <!-- Success Modal -->
+            <div id="successModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-btn" id="closeModal">&times;</span>
+                    <h2>Success!</h2>
+                    <p>Your resume has been created successfully.</p>
+                </div>
+            </div>
+<script>
+// Show modal on submit
+document.querySelector('.resume-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+    document.getElementById('successModal').style.display = 'block';
+});
+
+// Close modal
+document.getElementById('closeModal').onclick = function() {
+    document.getElementById('successModal').style.display = 'none';
+};
+
+// Close modal when clicking outside
+window.onclick = function(event) {
+    var modal = document.getElementById('successModal');
+    if (event.target == modal) {
+        modal.style.display = 'none';
+    }
+};
+</script>
 </html>
