--- a/resume.html
+++ b/resume.html
@@ -84,21 +84,28 @@
             </div>
 <script>
 // Show modal on submit
-document.querySelector('.resume-form').addEventListener('submit', function(e) {
+const modal = document.getElementById('successModal');
+const closeModalBtn = document.getElementById('closeModal');
+const form = document.querySelector('.resume-form');
+
+// Show modal with transition
+form.addEventListener('submit', function(e) {
     e.preventDefault();
-    document.getElementById('successModal').style.display = 'block';
+    modal.classList.add('show');
 });
 
-// Close modal
-document.getElementById('closeModal').onclick = function() {
-    document.getElementById('successModal').style.display = 'none';
-};
+// Close modal and clear form
+function closeModal() {
+    modal.classList.remove('show');
+    // Clear all input fields
+    form.reset();
+}
 
-// Close modal when clicking outside
+closeModalBtn.onclick = closeModal;
+
 window.onclick = function(event) {
-    var modal = document.getElementById('successModal');
     if (event.target == modal) {
-        modal.style.display = 'none';
+        closeModal();
     }
 };
 </script>
