--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="center-content">
-        <h1>Create Your Resume in a Professional Way</h1>
-        <p class="catchy">Stand out from the crowd with a stunning resume that highlights your skills and achievements!</p>
-        <a href="resume.html" class="action-btn">Start Building Now</a>
+    <div class="container min-vh-100 d-flex flex-column justify-content-center align-items-center text-center">
+        <h1 class="display-5 text-primary mb-3">Create Your Resume in a Professional Way</h1>
+        <p class="lead mb-4">Stand out from the crowd with a stunning resume that highlights your skills and achievements!</p>
+        <a href="resume.html" class="btn btn-primary btn-lg">Start Building Now</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
