--- a/resume.html
+++ b/resume.html
@@ -4,109 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Resume Builder</h1>
-            <p>Create your professional resume easily</p>
+    <div class="container py-4">
+        <header class="text-center mb-4">
+            <h1 class="display-5 text-primary">Resume Builder</h1>
+            <p class="lead">Create your professional resume easily</p>
         </header>
         <main>
-            <form class="resume-form">
-                <section class="section">
-                    <h2>Personal Information</h2>
-                    <div class="form-group">
-                        <label for="name">Full Name</label>
-                        <input type="text" id="name" name="name" required>
+            <form class="resume-form row g-4 justify-content-center">
+                <div class="col-12">
+                    <section class="bg-light rounded p-3 mb-3">
+                        <h2 class="h5 text-primary mb-3">Personal Information</h2>
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Full Name</label>
+                            <input type="text" id="name" name="name" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone</label>
+                            <input type="tel" id="phone" name="phone" class="form-control" required>
+                        </div>
+                    </section>
+                    <section class="bg-light rounded p-3 mb-3">
+                        <h2 class="h5 text-primary mb-3">Education</h2>
+                        <div class="mb-3">
+                            <label for="degree" class="form-label">Degree</label>
+                            <input type="text" id="degree" name="degree" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="school" class="form-label">School/College</label>
+                            <input type="text" id="school" name="school" class="form-control" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="year" class="form-label">Year of Graduation</label>
+                            <input type="text" id="year" name="year" class="form-control" required>
+                        </div>
+                    </section>
+                    <section class="bg-light rounded p-3 mb-3">
+                        <h2 class="h5 text-primary mb-3">Experience</h2>
+                        <div class="mb-3">
+                            <label for="company" class="form-label">Company</label>
+                            <input type="text" id="company" name="company" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="role" class="form-label">Role</label>
+                            <input type="text" id="role" name="role" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exp-years" class="form-label">Years</label>
+                            <input type="text" id="exp-years" name="exp-years" class="form-control">
+                        </div>
+                    </section>
+                    <section class="bg-light rounded p-3 mb-3">
+                        <h2 class="h5 text-primary mb-3">Skills</h2>
+                        <div class="mb-3">
+                            <label for="skills" class="form-label">Skills</label>
+                            <input type="text" id="skills" name="skills" class="form-control" placeholder="e.g. JavaScript, HTML, CSS">
+                        </div>
+                    </section>
+                    <div class="d-grid mt-3">
+                        <button type="submit" class="btn btn-primary btn-lg">Build Resume</button>
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                </section>
-                <section class="section">
-                    <h2>Education</h2>
-                    <div class="form-group">
-                        <label for="degree">Degree</label>
-                        <input type="text" id="degree" name="degree" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="school">School/College</label>
-                        <input type="text" id="school" name="school" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="year">Year of Graduation</label>
-                        <input type="text" id="year" name="year" required>
-                    </div>
-                </section>
-                <section class="section">
-                    <h2>Experience</h2>
-                    <div class="form-group">
-                        <label for="company">Company</label>
-                        <input type="text" id="company" name="company">
-                    </div>
-                    <div class="form-group">
-                        <label for="role">Role</label>
-                        <input type="text" id="role" name="role">
-                    </div>
-                    <div class="form-group">
-                        <label for="exp-years">Years</label>
-                        <input type="text" id="exp-years" name="exp-years">
-                    </div>
-                </section>
-                <section class="section">
-                    <h2>Skills</h2>
-                    <div class="form-group">
-                        <label for="skills">Skills</label>
-                        <input type="text" id="skills" name="skills" placeholder="e.g. JavaScript, HTML, CSS">
-                    </div>
-                </section>
-                <button type="submit" class="submit-btn">Build Resume</button>
+                </div>
             </form>
         </main>
-        <footer>
-            <p>&copy; 2025 Resume Builder. All rights reserved.</p>
+        <footer class="text-center mt-4">
+            <p class="text-muted">&copy; 2025 Resume Builder. All rights reserved.</p>
         </footer>
     </div>
 </body>
             <!-- Success Modal -->
-            <div id="successModal" class="modal">
+        <!-- Bootstrap Success Modal -->
+        <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                    <span class="close-btn" id="closeModal">&times;</span>
-                    <h2>Success!</h2>
-                    <p>Your resume has been created successfully.</p>
+                    <div class="modal-header bg-success text-white">
+                        <h5 class="modal-title" id="successModalLabel">Success!</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Your resume has been created successfully.
+                    </div>
                 </div>
             </div>
+        </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-// Show modal on submit
-const modal = document.getElementById('successModal');
-const closeModalBtn = document.getElementById('closeModal');
 const form = document.querySelector('.resume-form');
+const successModal = new bootstrap.Modal(document.getElementById('successModal'));
 
-// Show modal with transition
 form.addEventListener('submit', function(e) {
     e.preventDefault();
-    modal.classList.add('show');
+    successModal.show();
 });
 
-// Close modal and clear form
-function closeModal() {
-    modal.classList.remove('show');
-    // Clear all input fields
+document.getElementById('successModal').addEventListener('hidden.bs.modal', function () {
     form.reset();
-}
-
-closeModalBtn.onclick = closeModal;
-
-window.onclick = function(event) {
-    if (event.target == modal) {
-        closeModal();
-    }
-};
+});
 </script>
 </html>
